# agent-suite

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PLAN.md  PROJECT.md  PR_DESCRIPTION.md  README.md  README_ATLAS.md  ROADMAP.md  docker-compose.yml  openapi.yaml  pyproject.toml  quickstart.py  requirements.txt  test.db
.github/ISSUE_TEMPLATE/: agent_need.yml  bug_report.yml
agent-suite-sdk/: pyproject.toml
agent-suite-sdk/agent_suite_sdk/: __init__.py  client.py  exceptions.py  models.py
agent-suite-sdk/tests/: test_client.py
agent_suite_sdk/: __init__.py  client.py  schemas.py
agentwork_sdk/: __init__.py  client.py  models.py
app/: gui.py  main.py  ui.py  verifier.py
app/core/: config.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: attachment_service.py  email_verification.py
app/static/: app.js  index.html  style.css  styles.css
docs/: email-verification.md  openapi.yaml
examples/: README.md  async_usage.py  basic_usage.py  python_demo.py  python_sdk_quickstart.py  raw_httpx_quickstart.py  usage.py  webhook_handler.py
log/: 2026-03-09.md
python-sdk/: README.md
python-sdk/agentwork/: client.py
research/: email-architecture.md
sdk/: README.md  setup.py
sdk/agent_suite_sdk/: __init__.py  client.py
src/agent_suite_sdk/: __init__.py  client.py  exceptions.py  models.py
src/sdk/: agentwork_sdk.py  openapi_spec.yaml  setup.py
static/: compose.html  inbox.html
tests/: conftest.py  test_api.py  test_email_verification.py
