[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-suite-sdk"
version = "0.1.0"
description = "Python SDK for Agent Suite API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0"
]
