[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-suite-sdk"
version = "0.1.0"
description = "Python SDK for AgentWork Infrastructure APIs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "email-validator>=2.0.0",
]
authors = [{ name = "AgentWork contributors" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["agentwork_sdk*"]
