[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-suite-sdk"
version = "0.1.0"
description = "Python SDK for the Agent Suite API — infrastructure for agents, by agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Agent Suite Contributors", email = "dev@agents.dev"},
]
keywords = ["agent", "email", "api", "sdk", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/dmb4086/agent-suite"
Documentation = "https://github.com/dmb4086/agent-suite/tree/master/docs"
Repository = "https://github.com/dmb4086/agent-suite"
Issues = "https://github.com/dmb4086/agent-suite/issues"

[tool.setuptools.packages.find]
include = ["agent_suite_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
